[package]
name = "fiducia-load-balance"
version = "0.1.0"
edition = "2021"
description = "Edge load balancer / key-aware router for fiducia.cloud — routes each request to the leader of the shard that owns its key."

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
jsonwebtoken = "9"
sha2 = "0.10"
tower-http = { version = "0.5", features = ["trace", "limit", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared OpenTelemetry + tracing setup (one init() for all services).
fiducia-telemetry = { git = "https://github.com/fiducia-cloud/fiducia-telemetry.rs", tag = "v0.1.0" }

# Shared key→shard routing — single source of truth (see fiducia-routing.rs).
# Local dev uses a path dep; in CI/deployment switch to a git dep, e.g.:
#   fiducia-routing = { git = "https://github.com/fiducia-cloud/fiducia-routing.rs", tag = "v0.1.0" }
fiducia-routing = { path = "../fiducia-routing.rs" }

# Shared API payload/error contract — the LB parses the node's NotLeader redirect
# hint via `fiducia_interfaces::ProposeError`, so node + LB can't drift on it.
fiducia-interfaces = { path = "../fiducia-interfaces/generated/rust" }
